# ak4

.kiro/specs/qk4-android-port/: .config.kiro  design.md  requirements.md  tasks.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/app/src/main/java/com/qk4/android/: MainActivity.kt  QK4Application.kt
android/app/src/main/java/com/qk4/android/bridge/: Qk4Bridge.kt
android/app/src/main/java/com/qk4/android/data/: RadioState.kt  SettingsRepository.kt
android/app/src/main/java/com/qk4/android/service/: RadioConnectionService.kt
android/app/src/main/java/com/qk4/android/ui/components/: CwPaddles.kt  SmeterBar.kt  VfoDisplay.kt
android/app/src/main/java/com/qk4/android/ui/layouts/: CompactLayout.kt  ExpandedLayout.kt  MediumLayout.kt
android/app/src/main/java/com/qk4/android/ui/screens/: ConnectionScreen.kt  MainScreen.kt
android/app/src/main/java/com/qk4/android/ui/spectrum/: SpectrumSurfaceView.kt
android/app/src/main/java/com/qk4/android/ui/theme/: Theme.kt
android/app/src/main/java/com/qk4/android/viewmodel/: RadioViewModel.kt
core/: CMakeLists.txt
core/include/: qk4_api.h
core/src/: qk4_api.cpp
core/src/audio/: opus_decoder.cpp  opus_decoder.h  opus_encoder.cpp  opus_encoder.h  ring_buffer.cpp  ring_buffer.h  sidetone_generator.cpp  sidetone_generator.h
core/src/dsp/: nr_lms.cpp  nr_lms.h  nr_ssnr.cpp  nr_ssnr.h  spectrum_processor.cpp  spectrum_processor.h
core/src/engine/: qk4_engine.cpp  qk4_engine.h
core/src/models/: radio_state.cpp  radio_state.h
core/src/network/: cat_server.cpp  cat_server.h  dx_cluster_client.cpp  dx_cluster_client.h  protocol.cpp  protocol.h  reconnect_policy.cpp  reconnect_policy.h  tcp_client.cpp  tcp_client.h
core/src/utils/: radio_utils.cpp  radio_utils.h
core/tests/: CMakeLists.txt  test_protocol.cpp  test_radio_state.cpp  test_radio_utils.cpp  test_reconnect_policy.cpp  test_ring_buffer.cpp
